[gd_scene load_steps=6 format=3 uid="uid://deeq63l7hyv51"]

[ext_resource type="PackedScene" uid="uid://dnmoiivw7nsyc" path="res://scenes/section/section.tscn" id="1_10f20"]
[ext_resource type="Script" uid="uid://crjlbducj02rs" path="res://scenes/composition_editor/composition_editor.gd" id="1_ty8mu"]
[ext_resource type="Texture2D" uid="uid://dq276cqoyrj71" path="res://assets/icons/add.svg" id="2_swngj"]
[ext_resource type="Script" uid="uid://dbmjvw422wpb7" path="res://scenes/composition_editor/composition_sockets.gd" id="2_w47x3"]

[sub_resource type="ButtonGroup" id="ButtonGroup_w47x3"]
resource_name = "Sockets"

[node name="CompositionEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ty8mu")

[node name="MainBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sockets" parent="MainBox" node_paths=PackedStringArray("categories", "new_category_dialog", "category_warning_label", "new_category_name", "socket_dialog", "socket_name_edit", "socket_parent_options", "socket_create_bone_check_box", "socket_warning_label", "delete_dialog") instance=ExtResource("1_10f20")]
layout_mode = 2
script = ExtResource("2_w47x3")
socket_group = SubResource("ButtonGroup_w47x3")
categories = NodePath("Box/SocketCategories")
new_category_dialog = NodePath("NewCategoryDialog")
category_warning_label = NodePath("NewCategoryDialog/VBoxContainer/Space/Warning")
new_category_name = NodePath("NewCategoryDialog/VBoxContainer/NewCategoryName")
socket_dialog = NodePath("SocketDialog")
socket_name_edit = NodePath("SocketDialog/PropertiesContainer/NameContainer/NameEdit")
socket_parent_options = NodePath("SocketDialog/PropertiesContainer/ParentContainer/ParentOptions")
socket_create_bone_check_box = NodePath("SocketDialog/PropertiesContainer/CreateBoneContainer/CreateBoneCheckBox")
socket_warning_label = NodePath("SocketDialog/PropertiesContainer/Warning")
delete_dialog = NodePath("DeleteDialog")

[node name="TitleLabel" parent="MainBox/Sockets/Box" index="0"]
text = "Composition"

[node name="SocketCategories" type="VBoxContainer" parent="MainBox/Sockets/Box" index="2"]
layout_mode = 2

[node name="SocketOptions" type="HBoxContainer" parent="MainBox/Sockets/Box/SocketCategories"]
layout_mode = 2

[node name="AddCategory" type="Button" parent="MainBox/Sockets/Box/SocketCategories/SocketOptions"]
layout_mode = 2
tooltip_text = "Add Category."
icon = ExtResource("2_swngj")

[node name="NewCategoryDialog" type="ConfirmationDialog" parent="MainBox/Sockets"]
oversampling_override = 1.0
title = "New Category..."
size = Vector2i(400, 332)
content_scale_stretch = 1
dialog_text = "Write the name of the new Category.

HINT: To directly create a socket within a category, write the name of the category and socket in the following format:
 '[Category]/[Socket]'"
dialog_autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="MainBox/Sockets/NewCategoryDialog"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -158.0
offset_right = -8.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8

[node name="Space" type="Control" parent="MainBox/Sockets/NewCategoryDialog/VBoxContainer"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="Warning" type="Label" parent="MainBox/Sockets/NewCategoryDialog/VBoxContainer/Space"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.8418615, 0.83988035, 7.70092e-07, 1)
text = "⚠️ Warning"

[node name="NewCategoryName" type="LineEdit" parent="MainBox/Sockets/NewCategoryDialog/VBoxContainer"]
layout_mode = 2
placeholder_text = "Category Name"

[node name="SocketDialog" type="ConfirmationDialog" parent="MainBox/Sockets"]
oversampling_override = 1.0
title = "New Socket..."
size = Vector2i(500, 185)

[node name="PropertiesContainer" type="VBoxContainer" parent="MainBox/Sockets/SocketDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 492.0
offset_bottom = 136.0

[node name="NameContainer" type="HBoxContainer" parent="MainBox/Sockets/SocketDialog/PropertiesContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MainBox/Sockets/SocketDialog/PropertiesContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
text = "Name"

[node name="NameEdit" type="LineEdit" parent="MainBox/Sockets/SocketDialog/PropertiesContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Socket Name"

[node name="ParentContainer" type="HBoxContainer" parent="MainBox/Sockets/SocketDialog/PropertiesContainer"]
layout_mode = 2

[node name="ParentLabel" type="Label" parent="MainBox/Sockets/SocketDialog/PropertiesContainer/ParentContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
text = "Parent"

[node name="ParentOptions" type="OptionButton" parent="MainBox/Sockets/SocketDialog/PropertiesContainer/ParentContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 1
popup/item_0/text = "NONE"
popup/item_0/id = 0

[node name="CreateBoneContainer" type="HBoxContainer" parent="MainBox/Sockets/SocketDialog/PropertiesContainer"]
layout_mode = 2

[node name="CreateBoneSpace" type="Control" parent="MainBox/Sockets/SocketDialog/PropertiesContainer/CreateBoneContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="CreateBoneCheckBox" type="CheckBox" parent="MainBox/Sockets/SocketDialog/PropertiesContainer/CreateBoneContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create Bone"

[node name="Warning" type="Label" parent="MainBox/Sockets/SocketDialog/PropertiesContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.8418615, 0.83988035, 7.70092e-07, 1)
text = "⚠️ Warning"

[node name="DeleteDialog" type="ConfirmationDialog" parent="MainBox/Sockets"]
oversampling_override = 1.0
dialog_text = " Remove?"

[node name="Panel" type="Panel" parent="MainBox"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MainBox/Sockets/Box/SocketCategories/SocketOptions/AddCategory" to="MainBox/Sockets" method="_on_add_category_pressed"]
[connection signal="confirmed" from="MainBox/Sockets/NewCategoryDialog" to="MainBox/Sockets" method="_on_new_category_dialog_confirmed"]
[connection signal="text_changed" from="MainBox/Sockets/NewCategoryDialog/VBoxContainer/NewCategoryName" to="MainBox/Sockets" method="_on_new_category_name_text_changed"]
[connection signal="confirmed" from="MainBox/Sockets/SocketDialog" to="MainBox/Sockets" method="_on_socket_dialog_confirmed"]
[connection signal="text_changed" from="MainBox/Sockets/SocketDialog/PropertiesContainer/NameContainer/NameEdit" to="MainBox/Sockets" method="_on_socket_name_text_changed"]
[connection signal="confirmed" from="MainBox/Sockets/DeleteDialog" to="MainBox/Sockets" method="_on_delete_dialog_confirmed"]

[editable path="MainBox/Sockets"]
